configure user and quiz tables with terraform

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -36,3 +36,10 @@ lerna-debug.log*
 
 # private script
 .bashrc
+
+# terraform
+.terraform/
+*.tfstate
+*.tfstate.backup
+*.tfstate.lock.info*
+*.terraform.lock.hcl
