--- a/server/package.json
+++ b/server/package.json
@@ -40,9 +40,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "sqlite3": "^5.1.4",
-    "typeorm": "^0.3.11"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
