--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
+    "dynamoose": "^3.1.0",
     "graphql": "^16.6.0",
+    "graphql-type-long": "^0.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
