--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "graphql": "^16.6.0",
     "graphql-type-long": "^0.1.1",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
