--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "graphql": "^16.6.0",
     "graphql-type-long": "^0.1.1",
     "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -54,6 +55,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/passport-github2": "^1.2.5",
     "@types/passport-google-oauth2": "^0.1.5",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.34",
