add serverless commands to Makefile

--- a/server/Makefile
+++ b/server/Makefile
@@ -3,3 +3,9 @@ docker-build:
 
 docker-run:
 	docker run -p 8080:8080 938550590/collab-backend
+
+serverless:
+	serverless offline
+
+serverless-deploy:
+	yarn build && serverless deploy --stage prod
