Fix e2e ts issue

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./.eslintrc.js", "src/**/*", "tests/**/*"],
+  "include": ["./.eslintrc.js", "src/**/*", "test/*"],
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
