--- a/server/package.json
+++ b/server/package.json
@@ -53,6 +53,7 @@
     "@types/aws-lambda": "^8.10.109",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.2.5",
     "@types/node": "18.11.18",
     "@types/passport-github2": "^1.2.5",
     "@types/passport-google-oauth2": "^0.1.5",
