--- a/server/serverless.yaml
+++ b/server/serverless.yaml
@@ -46,9 +46,9 @@ provider:
     GITHUB_AUTH_CALLBACK: ${env:GITHUB_AUTH_CALLBACK}
     USER_TABLE: ${env:USER_TABLE}
     USER_TABLE_NAME_INDEX: ${env:USER_TABLE_NAME_INDEX}
-    QUIZ_TABLE_NAME: ${env:QUIZ_TABLE_NAME}
-    QUESTION_TABLE_NAME: ${env:QUESTION_TABLE_NAME}
-    ATTEMPT_HISTORY_TABLE_NAME: ${env:ATTEMPT_HISTORY_TABLE_NAME}
+    QUIZ_TABLE: ${env:QUIZ_TABLE}
+    QUESTION_TABLE: ${env:QUESTION_TABLE}
+    ATTEMPT_HISTORY_TABLE: ${env:ATTEMPT_HISTORY_TABLE}
     ATTEMPT_HISTORY_TABLE_USER_INDEX: ${env:ATTEMPT_HISTORY_TABLE_USER_INDEX}
 
 functions:
