Implemen s3 image uploading

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./.eslintrc.js", "src/**/*", "test/*"],
+  "include": ["./.eslintrc.js", "src/**/*", "test/*", "../client"],
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
