--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@vendia/serverless-express": "^4.10.1",
     "apollo-server-express": "^3.11.1",
     "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1290.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -54,6 +55,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.2.5",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/passport-github2": "^1.2.5",
     "@types/passport-google-oauth2": "^0.1.5",
