Update serverless yaml

--- a/server/serverless.yaml
+++ b/server/serverless.yaml
@@ -58,6 +58,7 @@ provider:
     QUESTION_TABLE: ${env:QUESTION_TABLE}
     ATTEMPT_HISTORY_TABLE: ${env:ATTEMPT_HISTORY_TABLE}
     ATTEMPT_HISTORY_TABLE_USER_INDEX: ${env:ATTEMPT_HISTORY_TABLE_USER_INDEX}
+    COMMENT_TABLE: ${env:COMMENT_TABLE}
 
 functions:
   main:
