--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,6 @@
     "db:rm": "docker compose rm -s -f -v",
     "db:up": "docker compose up -d",
     "db:restart": "yarn db:rm && yarn db:up",
-    "test:e2e:restart": "yarn db:restart && yarn test:e2e",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -21,7 +20,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.config.js"
+    "test:e2e": "jest --config ./test/jest-e2e.config.js",
+    "test:e2e:restart": "yarn db:restart && yarn test:e2e"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.7",
