--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "db:rm": "docker compose rm -s -f -v",
+    "db:up": "docker compose up -d",
+    "db:restart": "yarn db:rm && yarn db:up",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -17,7 +20,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.config.js"
+    "test:e2e": "jest --config ./test/jest-e2e.config.js",
+    "test:e2e:restart": "yarn db:restart && yarn test:e2e"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.7",
@@ -33,6 +37,7 @@
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1290.0",
     "bcryptjs": "^2.4.3",
+    "chance": "^1.1.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
@@ -53,6 +58,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/aws-lambda": "^8.10.109",
     "@types/bcryptjs": "^2.4.2",
+    "@types/chance": "^1.1.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.2.5",
     "@types/multer": "^1.4.7",
