Add auth test util

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,7 @@
   "include": [
     "./.eslintrc.js",
     "src/**/*",
-    "test/*",
+    "test/**/*",
     "../client",
     "test/users/users.e2e-spec.ts",
     "test/users/create.user.helper.ts",
