--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,12 +2,7 @@
   "include": [
     "./.eslintrc.js",
     "src/**/*",
-    "test/**/*",
-    "../client",
-    "test/users/users.e2e-spec.ts",
-    "test/users/create.user.helper.ts",
-    "test/users/get.users.helper.ts",
-    "test/auth/auth.e2e-spec.ts"
+    "test/**/*"
   ],
   "compilerOptions": {
     "module": "commonjs",
