--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "dynamoose": "^3.1.0",
     "graphql": "^16.6.0",
     "graphql-type-long": "^0.1.1",
+    "lodash": "^4.17.21",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth2": "^0.2.0",
@@ -61,6 +62,7 @@
     "@types/chance": "^1.1.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.2.5",
+    "@types/lodash": "^4.14.191",
     "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/passport-github2": "^1.2.5",
