Add more tests to quiz-attempt

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,7 @@
   "include": [
     "./.eslintrc.js",
     "src/**/*",
-    "test/**/*"
+    "test/**/*",
   ],
   "compilerOptions": {
     "module": "commonjs",
@@ -25,5 +25,6 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "esModuleInterop": true
-  }
+  },
+  "files": ["global.d.ts"]
 }
