--- a/server/package.json
+++ b/server/package.json
@@ -81,6 +81,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
+    "jest-extended": "^3.2.3",
     "prettier": "^2.8.1",
     "serverless-offline": "^12.0.3",
     "source-map-support": "^0.5.20",
